--- a/app/client/index.html
+++ b/app/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ineractive Cart</title>
+    <meta name="viewport" content="width=device-width">
 </head>
 <body>
     <div id="root"></div>
